--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-typed": "^2.0.12",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
