--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md}\""
   },
   "dependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "framer-motion": "^11.16.0",
     "next": "15.1.2",
     "react": "^19.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-typed": "^2.0.12",
     "swiper": "^11.1.15"
