--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-copy-to-clipboard": "^5.0.7",
     "framer-motion": "^11.16.0",
+    "lottie-react": "^2.4.1",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-copy-to-clipboard": "^5.1.0",
